--- a/02_conceitos_fundamentos/src/index.html
+++ b/02_conceitos_fundamentos/src/index.html
@@ -8,16 +8,19 @@
     <link rel="stylesheet" href="../dist/output.css" />
   </head>
   <body>
-    <h1 class="bg-green-500 text-red-300 hover:bg-red-300 hover:text-green-500">
+    <h1 class="text-red-300 bg-green-500 hover:bg-red-300 hover:text-green-500">
       Tudo são classes
     </h1>
-    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+    <button class="px-4 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-700">
       Botão
     </button>
-    <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">
+    <button class="px-4 py-2 font-bold text-white bg-green-500 rounded hover:bg-green-700">
       Botão
     </button>
-    <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">
+    <button class="px-4 py-2 font-bold text-white bg-red-500 rounded hover:bg-red-700">
+      Botão
+    </button>
+    <button class="px-4 py-2 font-bold text-white bg-red-500 rounded hover:bg-red-700">
       Botão
     </button>
   </body>
